--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+0.3
+---
+
+- Add kotti_site_gallery to requirements.
+- Pin pyramid to 1.3.4 for now (Kotti isn't compatible with Pyramid 1.4 yet)
+
 0.2
 ---
 
